--- a/Models/TTS3_Vocoder/2016.09.12_WaveNet.md
+++ b/Models/TTS3_Vocoder/2016.09.12_WaveNet.md
@@ -5,24 +5,24 @@
 
 - 标题: WaveNet: A Generative Model for Raw Audio
 - 作者:
-  - 01 [Aaron van den Oord](../../Authors/Aaron_van_den_Oord.md)
-  - 02 [Sander Dieleman](../../Authors/Sander_Dieleman.md)
-  - 03 [Heiga Zen](../../Authors/Heiga_Zen.md)
-  - 04 [Karen Simonyan](../../Authors/Karen_Simonyan.md)
-  - 05 [Oriol Vinyals](../../Authors/Oriol_Vinyals.md)
-  - 06 [Alex Graves](../../Authors/Alex_Graves.md)
-  - 07 [Nal Kalchbrenner](../../Authors/Nal_Kalchbrenner.md)
-  - 08 [Andrew Senior](../../Authors/Andrew_Senior.md) 
-  - 09 [Koray Kavukcuoglu](../../Authors/Koray_Kavukcuoglu.md)
+  1. Aaron van den Oord
+  2. Sander Dieleman
+  3. Heiga Zen
+  4. Karen Simonyan
+  5. Oriol Vinyals
+  6. Alex Graves
+  7. Nal Kalchbrenner
+  8. Andrew Senior
+  9. Koray Kavukcuoglu
 - 机构:
-  - 机构 
+  - Google
+  - DeepMind
 - 时间:
   - 预印时间: 2016.09.12 ArXiv v1
   - 预印时间: 2016.09.19 ArXiv v2
-  - 更新笔记: 2024.06.30
+  - 更新笔记: 2024.09.08
 - 发表:
-  - [Google](../../Institutions/USA-Google.md)
-  - [DeepMind](../../Institutions/DeepMind.md)
+  - 
 - 链接:
   - [ArXiv](https://arxiv.org/abs/1609.03499)
   - [DOI]()
