--- a/Blogs/苏剑林/系列-低秩近似之路.md
+++ b/Blogs/苏剑林/系列-低秩近似之路.md
@@ -103,3 +103,24 @@ $$
     &= \| M \|_F^2
 \end{aligned}
 $$
+
+### 矩阵求导
+
+对于一个优化目标, 最理想的结果自然是能够通过求导求出解析解.
+可以发现对于前文定义的优化问题:
+
+$$
+    \arg\min_{B} \| AB-M \|_F^2
+$$
+
+其中 $AB-M$ 是关于 $B$ 的线性函数, 所以优化目标是关于 $A$ 或者 $B$ 的二次函数, 二次函数的最小值是有解析解的.
+
+求出 $\mathcal{L}=\| AB-M \|_F^2$ 关于 $B$ 的导数, 由链式法则:
+
+$$
+    \dfrac{\partial \mathcal{L}}{\partial B_{i,j}} = \sum_{k,l} \dfrac{\partial \mathcal{L}}{\partial E_{k,l}}\dfrac{\partial E_{k,l}}{\partial B_{i,j}}
+$$
+
+其中 $\mathcal{L}=\|E\|_F^2=\sum_{i,j} E_{i,j}^2$, $E=AB-M$.
+
+显然在求和的众多平方项中只有当 $(i,j)=(k,l)$ 时, 关于 $E_{k,l}$ 的偏导才非零, 其他项都为零.
