--- a/Blogs/苏剑林/系列-低秩近似之路.md
+++ b/Blogs/苏剑林/系列-低秩近似之路.md
@@ -195,3 +195,64 @@ $$
 矩阵的伪逆实际上是一个很宽泛的概念, 它有很多种不同形式.
 这里介绍的伪逆实际上是最常见的 **Moore-Penrose 逆**, 除此之外还有 "Drazin 逆", "Bott-Duffin 逆" 等.
 此处不做展开.
+
+### 一般形式
+
+$$
+    A^{\dagger} = (A^{\mathsf{T}}A)^{-1}A^{\mathsf{T}}\\
+    B^{\dagger} = B^{\mathsf{T}}(BB^{\mathsf{T}})^{-1}
+$$
+
+这两个等式成立的关键前提是相应的 $A^{\mathsf{T}}A$ 和 $BB^{\mathsf{T}}$ 矩阵可逆.
+但如果不可逆呢?
+
+以 $A^\dagger$ 为例, 假设 $A^{\mathsf{T}}A\in \mathbb{R}^{r\times r}$ 不可逆, 那么意味着 $A$ 的秩不足 $r$, 即只能找到 $s<r$ 个列向量构成的极大线性无关组构成矩阵 $A_s \in \mathbb{R}^{n\times s}$.
+
+那么 $A = A_s P$, 其中 $P\in \mathbb{R}^{s\times r}$ 是 $A_s$ 到 $A$ 的矩阵.
+
+此时
+
+$$
+    \arg\min_{B} \| AB-I\|_F^2 = \arg\min_{B} \| A_s P B-I\|_F^2
+$$
+
+如果 $B$ 的最优解仍然记为 $A^\dagger$, 那么:
+
+$$
+    PA^\dagger = A_s^\dagger = (A_s^{\mathsf{T}}A_s)^{-1}A_s^{\mathsf{T}}
+$$
+
+此时的 $A_s$ 是 $s$ 满秩的, 所以 $A_s^{\mathsf{T}}A_s$ 是可逆的, 因此上式是良好定义的.
+
+然而从 $A^\dagger$ 到 $PA^\dagger$ 是一个降维过程, 这意味着存在多个 $A^\dagger$ 使得 $PA^\dagger=A_s^\dagger$. 即最优解不唯一.
+
+也就是说当 $A^{\mathsf{T}}A$ 不可逆时, 无法只凭借最小化优化目标 $\mathcal{L}$ 来确定唯一的伪逆 $A^\dagger$.
+
+---
+
+一个可能的思路时补充条件, 如 $(A^\dagger)^\dagger=A$ 或 $A^\dagger A A^\dagger=A^\dagger$, 结合 $PA^\dagger=A_s^\dagger$ 就能唯一确定 $A^\dagger$.
+
+实际上可以用一个精妙的技巧更加优雅和统一地处理这个问题.
+
+这个问题出在当 $A^{\mathsf{T}}A$ 不可逆时, 目标函数 $\mathcal{L}$ 不是严格正定的, 我们可以加上一个正则项来让它变得正定, 求出结果后再让正则项的权重趋于零:
+
+$$
+    A^\dagger = \lim_{\epsilon\to 0}\arg\min_{B} \|AB-I_n\|_F^2 + \epsilon \|B\|_F^2
+$$
+
+这里 $\epsilon>0$ 然后正向趋于 0.
+
+由上式可以解得:
+
+$$
+    A^\dagger = \lim_{\epsilon\to 0}(A^{\mathsf{T}}A+\epsilon I_r)^{-1}A^{\mathsf{T}}
+$$
+
+当 $\epsilon>0$ 时, $A^{\mathsf{T}}A+\epsilon I_r$ 必然是可逆的. 因此上式是良好定义的.
+
+由于 $\epsilon\to 0$ 时, 正则项可以忽略不计, 所以上述极限必然是存在的.
+注意: 这里说的是整体极限的存在性, 当 $A^{\mathsf{T}}A$ 不可逆时, 极限 $\lim_{\epsilon\to 0}(A^{\mathsf{T}}A+\epsilon I_r)^{-1}$ 是不存在的, 只有乘上 $A^{\mathsf{T}}$ 后整体再取极限才是正常的.
+
+上式作为伪逆的一般推广有什么优点呢?
+1. 首先和先前求出的 $A^\dagger$ 表达式具有直观且形式一致的理论优雅性;
+2. 其次, 形式上的一致性也使得 $A^{\mathsf{T}}A$ 可逆时 $A^\dagger$ 的一些性质得以保留, 从而在讨论 $A^\dagger$ 时无需考虑 $A^{\mathsf{T}}A$ 是否可逆.
