--- a/Models/Speech_Neural_Codec/2024.09.18_LFSC.md
+++ b/Models/Speech_Neural_Codec/2024.09.18_LFSC.md
@@ -100,6 +100,36 @@
 >
 > The increase in codebook size from 1000 codes to 2016 produced the same score for general audio quality. However, it improved the SI-SDR, STFT distance, and especially speech intelligibility (CER 2.61 vs 2.09). Increasing the codebook size even more from 2016 to 4032 brings slightly better results for almost all the metrics. In addition, using FSQ with  4032 codes our model was able to achieve the same general quality as the model trained without vector quantization and competitive performance in the other metrics.
 
+## 4.ZS-TTS Study
+
+### Experiments Setup
+
+> To evaluate how our codec performs in comparison to previous codecs in practice, we replicated the experiments outlined in \cite{neekhara2024improving}. We utilized the T5-TTS \cite{neekhara2024improving} model with context conditioning on the decoder due to its superior performance on the ZS-TTS task.
+>
+> For training the TTS model, we employed the same datasets as those used in \cite{neekhara2024improving}. These datasets comprise 1.8k hours of English data from four sources: the train-clean 360 subset of LibriTTS~\cite{zen2019libritts}, HiFiTTS~\cite{bakhturina21_interspeech}, a 1000-hour subset from MLS train set~\cite{pratap2020mls}, and a proprietary dataset featuring two speakers and totaling 63 hours. 
+>
+> The model was trained using three SOTA codecs: Encodec, DAC, Spectral Codec, and two variants of our proposed codec. Although models such as APCodec and WavTokenizer have recently demonstrated promising performance, they have not yet been explored in the context of Speech LLM training. Considering that these codecs may require specific tricks to work properly in this context, we decided to focus on SOTA codecs that have been successfully applied in the training of Speech LLM models.
+>
+> For training, we utilize a fixed context duration of three seconds, where context is an alternate utterance from the speaker of the target utterance.  We train each of our models with a batch size of 192 distributed across 32 NVIDIA A100 GPUs, for 300,000 steps. The training is conducted using the AdamW optimizer with a fixed learning rate of 1e-4.  During inference, we use multinomial Top-k sampling with k equal to 80 and temperature equal to 0.85. 
+>
+> Following~\cite{neekhara2024improving} and prior works, for the 24kHz 6kbps Encodec and 44.1kHz 7.75kbps DAC codecs, we utilized the delay pattern method~\cite{copet2024simple} for the codec sequence. For both the Spectral Codec and our proposed codec, we predicted all eight codes in parallel. To ensure a fair comparison with the Spectral Codec and our proposed codec, and in accordance with~\cite{neekhara2024improving}, we extracted the codes from 22.05kHz audio resampled to 44.1kHz for the DAC model.
+
+### Results & Discussion
+
+> To evaluate the performance of the T5-TTS model with various codecs, we followed the methodology proposed by~\cite{neekhara2024improving}.{We consider 200 utterances from the VCTK dataset~\cite{veaux2017cstr}.}
+> These sentences were generated using 20 random unseen speakers with 10 utterances per speaker from the VCTK dataset. Consistent with~\cite{neekhara2024improving}, we used Character Error Rate (CER), Speaker Encoder Cosine Similarity (SECS), and Mean Opinion Score (MOS) as evaluation metrics.
+>
+> CER was computed by comparing the transcription of the generated audio with the TTS input text, utilizing the Conformer-Transducer Large ASR model\footnote{https://huggingface.co/nvidia/stt\_en\_conformer\_transducer\_large}. For SECS, we computed the cosine similarity between the speaker embeddings of the synthesized speech and the target speaker reference provided to the TTS model, using the WavLM speaker verification model\footnote{https://huggingface.co/microsoft/wavlm-base-plus-sv} to extract the speaker embeddings.
+>
+> For the MOS evaluation, 200 audio samples were generated for each model. Each listener was presented with one sample and asked to rate it on a scale from 1 to 5, in 1-point intervals. Each audio sample was evaluated by at least 10 independent listeners.
+>
+> In addition to these metrics, we computed the inference real-time factor (RTF). For better readability, we normalized the RTF values by setting the fastest model's RTF to 1 and adjusting the other models' RTF values accordingly. 
+>
+> Table \ref{tab:results-tts} presents the results of our ZS-TTS experiments. 
+>
+> The T5-TTS model trained using our proposed codec achieved better CER, showing that our codec improved the pronunciation accuracy in the TTS task. Our proposed codecs achieved performance comparable to previous models in terms of MOS. No significant differences were observed when comparing our codecs with DAC and Spectral Codec. In addition, the model achieved better speaker similarity, while bringing around 3 times speedup compared to other SOTA codecs. 
+>
+> Although, in Section \ref{sec:ablations}, our proposed codec using 4032 codebook size achieved better metrics than the proposed codec with 2016 codebook size, this improvement in performance did not generalize for the TTS downstream task. Despite, the model 4032 codebook size achieving a better MOS, there is no significant difference. In addition, the model with a smaller codebook size produced better performance in all the others metrics. We believe that it happens because when the codebook size is smaller the model tends to generalize better. A similar pattern was also reported in \cite{casanova2024xtts}.
 
 ## 6.Conclusions: 结论
 
