--- a/Models/Speech_Neural_Codec/2023.05.04_HiFi-Codec.md
+++ b/Models/Speech_Neural_Codec/2023.05.04_HiFi-Codec.md
@@ -5,20 +5,16 @@
 
 - 标题: HiFi-Codec: Group-residual Vector quantization for High Fidelity Audio Codec
 - 作者:
-  | 序号 | 作者 | 机构 |
-  | :-: | --- | --- |
-  | 01 | [杨东超 (Dongchao Yang)](../../Authors/Dongchao_Yang_(杨东超).md) | [北京大学](../../Institutions/CHN-PKU_北京大学.md) |
-  | 02 | [Songxiang Liu](../../Authors/Songxiang_Liu.md) | [腾讯 AI Lab](../../Institutions/CHN-TecentAI.md) |
-  | 03 | [黄融杰 (Rongjie Huang)](../../Authors/Rongjie_Huang_(黄融杰).md) | [浙江大学](../../Institutions/CHN-ZJU_浙江大学.md) |
-  | 04 | [Jinchuan Tian](../../Authors/Jinchuan_Tian.md) | [北京大学](../../Institutions/CHN-PKU_北京大学.md) |
-  | 05 | [Chao Weng](../../Authors/Chao_Weng.md) | [腾讯 AI Lab](../../Institutions/CHN-TecentAI.md) |
-  | 06 | [Yuexian Zou](../../Authors/Yuexian_Zou.md) | [北京大学](../../Institutions/CHN-PKU_北京大学.md) |
+  - 01. 杨东超 (Dongchao Yang) - 北京大学
+  - 02. Songxiang Liu - 腾讯 AI Lab
+  - 03. 黄融杰 (Rongjie Huang) - 浙江大学
+  - 04. Jinchuan Tian - 北京大学
+  - 05. Chao Weng - 腾讯 AI Lab
+  - 06. Yuexian Zou - 北京大学
 - 机构:
-  | 序号 | 机构 | 占比 |
-  | :-: | --- | :-: |
-  | 01 | [北京大学](../../Institutions/CHN-PKU_北京大学.md) | 03/06 |
-  | 02 | [腾讯 AI Lab](../../Institutions/CHN-TecentAI.md) | 02/06 |
-  | 03 | [浙江大学](../../Institutions/CHN-ZJU_浙江大学.md) | 01/06 |
+  - 01. 北京大学 03/06
+  - 02. 腾讯 AI Lab 02/06
+  - 03. 浙江大学 01/06
 - 时间:
   - 预印时间: 2023.05.04 ArXiv v1
   - 预印时间: 2023.05.07 ArXiv v2
@@ -32,7 +28,6 @@
   - [Demo]()
   - [Scholar](https://scholar.google.com/scholar?cluster=16848014406171770614)
 - 标签:
-  - ?
 - 页数: ?
 - 引用: ?
 - 被引: 56
