--- a/Models/Speech_LLM/2024.06.12_VALL-E_R.md
+++ b/Models/Speech_LLM/2024.06.12_VALL-E_R.md
@@ -5,19 +5,19 @@
 
 - 标题: VALL-E R: Robust and Efficient Zero-Shot Text-to-Speech Synthesis via Monotonic Alignment
 - 作者:
-  - 01 [Bing Han](../../Authors/Bing_Han.md)
-  - 02 [Long Zhou](../../Authors/Long_Zhou_(周龙).md)
-  - 03 [Shujie Liu](../../Authors/Shujie_Liu_(刘树杰).md)
-  - 04 [Sanyuan Chen](../../Authors/Sanyuan_Chen_(陈三元).md)
-  - 05 [Lingwei Meng](../../Authors/Lingwei_Meng.md)
-  - 06 [Yanming Qian](../../Authors/Yanming_Qian.md)
-  - 07 [Yanqing Liu](../../Authors/Yanqing_Liu.md)
-  - 08 [Sheng Zhao](../../Authors/Sheng_Zhao_(赵胜).md)
-  - 09 [Jinyu Li](../../Authors/Jinyu_Li_(李劲宇).md)
-  - 10 [Furu Wei](../../Authors/Furu_Wei_(韦福如).md)
+  - 01 Bing Han
+  - 02 Long Zhou (周龙)
+  - 03 Shujie Liu (刘树杰)
+  - 04 Sanyuan Chen (陈三元)
+  - 05 Lingwei Meng
+  - 06 Yanming Qian
+  - 07 Yanqing Liu
+  - 08 Sheng Zhao (赵胜)
+  - 09 Jinyu Li (李劲宇)
+  - 10 Furu Wei (韦福如)
 - 机构:
-  - [上海交通大学](../../Institutions/CHN-SJTU_上海交通大学.md)
-  - [微软](../../Institutions/USA-Microsoft.md)
+  - 01 上海交通大学
+  - 02 微软
 - 时间:
   - 预印时间: 2024.06.12 ArXiv v1
   - 更新笔记: 2024.06.19
