--- a/Models/Speech_LLM/2024.09.18_CoFi-Speech.md
+++ b/Models/Speech_LLM/2024.09.18_CoFi-Speech.md
@@ -19,3 +19,32 @@
 > However, different from the text, the discrete speech sequence is much longer to keep sufficient capacity to preserve phonetic and acoustic information. This long sequence length not only increases the complexity of TTS modeling but aggregates the `recency bias` of LMs \cite{peysakhovich2023attention, wang2024eliminating}, i.e. overly focusing on recent tokens during auto-regressive generation. This issue makes LM focus less on coarse-grained information \cite{guo2023msmc}, e.g. phonetics, prosody, and speaking style at higher and different temporal scales, hence causing unstable TTS performance, producing unnatural or even unintelligible speech. Although monotonic attention constraints \cite{han2024vall, du2024vall, wang2024attention} are proposed to fix stability issues, they still cannot solve `recency bias` fundamentally. Some works \cite{tortoise, socodec, li2024single} turn to directly model shorter speech sequences with a larger frameshift to avoid this issue, but limits the fine-grained expression of LMs in TTS. This dilemma implies the necessity of applying guidance to LMs to pay sufficient attention to both coarse-grained and fine-grained information of speech. 
 >
 > In this work, we propose a novel CLM-based zero-shot TTS approach, CoFi-Speech, that generates speech in a coarse-to-fine manner via a multi-scale speech coding and generation approach. In this framework, the multi-scale speech codec, CoFi-Codec, decomposes speech into multiple discrete sequences with different temporal resolutions and decodes them back with a high reconstruction quality. Then, we propose two LM-based approaches to predict this multi-scale speech representation from coarse to fine: single-LM-based chain-of-scale generation and multiple-LM-based stack-of-scale generation. In experiments, we present subjective and objective evaluations to demonstrate that CoFi-Speech significantly outperforms baseline systems based on single-scale speech sequences on naturalness and similarity, where stack-of-scale generation performs best. Finally, we conduct detailed ablation studies to analyze multi-scale coding and generation, to further validate the effectiveness of ``speaking from coarse to fine'' in achieving high-quality CLM-based TTS.
+
+## 2.Related Works: 相关工作
+
+## 3.Methodology: 方法
+
+### CoFi-Codec
+
+> CoFi-Codec aims to decompose speech into multiple discrete sequences with different resolutions to provide a multi-scale speech representation. Fig. \ref{fig:cofi} (a) presents a three-scale CoFi-Codec model architecture. We first convert speech signals into the Mel spectrogram, and employ multiple encoder blocks to down-sample it into sequences at different temporal scales. Specifically, each encoder block is applied with a 1-D convolutional ResNet block and a strided convolutional layer for down-sampling. Meanwhile, we follow SoCodec \cite{socodec} to apply an ECAPA-TDNN-based \cite{dawalatabad2021ecapa} reference encoder to extract a global embedding $g$ from the Mel spectrogram to capture time-invariant information, e.g., speaker identity, global speaking style, acoustic environment, etc.
+>
+> In decoding, we apply an equal number of decoder modules to quantize and decode these encoding sequences in a reversed order to reconstruct the Mel spectrogram from coarse to fine. For example, in $i$-th decoder block, we first extract the residual sequence at this stage by performing $\mathbf{e}^i - \mathbf{d}^i$, i.e. removing high-scale information from the decoding sequence $\mathbf{d}^i$ out of the encoding sequence $\mathbf{e}^i$. We then apply single-stream \cite{vqvae} or multi-stream vector quantization, e.g. RQ \cite{chen2010approximate} and PQ \cite{jegou2010product}, to obtain the quantized speech sequence $\mathbf{s}^i$. It is added with $\mathbf{d}^i$ and global embedding $g$, subsequently processed by a ResNet block and a transposed convolutional layer for up-sampling to produce the next decoding sequence $\mathbf{d}^{i-1}$. Notably, the highest-scale decoder block adopts an all-zero sequence as the decoding sequence. Finally, the Mel spectrogram is reconstructed from the decoder, and converted to the waveform via a pre-trained neural vocoder.
+
+> In training, the model tends to overfit low-scale sequences with richer information, leading to high-scale representation collapse, i.e. nothing is preserved in the sequence. Hence, we propose scale-wise nested dropout (SWND), which masks quantized sequences $\mathbf{s}_{1:b}$ given an index $b$ randomly sampled from $[0, N_s - 1]$, where $b=0$ indicates that no sequence is masked. This approach forces high-scale sequence to preserve effective information for reconstruction, avoiding representation collapse. Moreover, we apply GAN training \cite{li2024single, socodec} on CoFi-Codec to improve the generation quality of the Mel spectrogram. The loss function is written as follows:
+
+$$
+\begin{aligned}
+    \mathcal{L}_c &= \lambda_{vq} * \mathcal{L}_{vq} + \lambda_{reg} *\mathcal{L}_{reg} + 
+    \lambda_{adv} * \mathcal{L}_{adv}
+\end{aligned}
+$$
+
+> where $\mathcal{L}_{vq}$ is the vector-quantization loss, i.e. the averaged L2 loss between embeddings before and after VQ, $\mathcal{L}_{reg}$ is the L2-based regression loss on Mel spectrogram, and $\mathcal{L}_{adv}$ is the adversarial loss following \cite{socodec}.
+
+### CoFi-LM
+
+## 4.Experiments: 实验
+
+## 5.Results: 结果
+
+## 6.Conclusions: 结论
