--- a/Models/Speech_LLM/2024.09.18_CoFi-Speech.md
+++ b/Models/Speech_LLM/2024.09.18_CoFi-Speech.md
@@ -67,4 +67,16 @@ $$
 
 ## 5.Results: 结果
 
+### TTS System Comparison
+
+> As shown in Table \ref{tab:mos}, we compare CoFi-Speech with baseline systems: VALL-E and SoCodec-TTS, trained with the same dataset as ours, and the SotA industrial TTS system, CosyVoice trained with over 100k hours of data. The baseline system VALL-E auto-regressively generates an eight-stream speech sequence with a short frameshift of 20ms along both time and stream axes. This model troubled by ``recency bias'' presents serious stability issues on this challenging test set, performing the worst synthesis quality. SoCodec-TTS compresses speech into a short speech sequence with a frameshift of only 120ms to achieve stable LM inference. It presents high naturalness but low speaker similarity due to the lack of fine-grained information. In contrast, CoFi-Speech leverages both coarse-grained and fine-grained information, presenting better naturalness and similarity, especially for the SoS-based approach with the highest NMOS and SMOS, even outperforming CosyVoice trained with much more data. This significant improvement underscores the efficacy of CoFi-Speech in CLM-TTS.\footnote{Samples are available at \url{https://hhguo.github.io/DemoCoFiSpeech}}
+
+### Multi-Scale Speech Coding
+
+> We conduct objective evaluations to investigate if CoFi-Codec can decompose speech into sequences at multiple temporal scales while keeping high reconstruction quality. As shown in Fig. \ref{fig:msc}, we evaluate speech reconstructed from top-$b$ scales. For example, for a three-scale CoFi-Codec, ``$b=2$'' means that we only reconstruct speech using $\textbf{s}^3$ and $\textbf{s}^2$, and mask $\textbf{s}^1$ with all-zero vectors. The result demonstrates that CoFi-Codec learns a good multi-scale representation with the help of SWND. The high-scale sequence preserves more effective information, presenting lower reconstruction loss over that of codec without SWND. Moreover, compared with the single-scale CoFi-Codec and Encodec \cite{encodec} with a four-stream sequence on a frameshift of 20ms, CoFi-Codec presents the lowest MCD and CER. This result validates CoFi-Codec as the expected codec, providing multi-scale discrete speech representation and keeping high reconstruction quality.
+
+### Recency Bias: Attention Visualization
+
+> Finally, we attempt to investigate the `recency bias` issue in CLM-TTS by visualizing attention maps of different LMs when synthesizing the same utterance. We aggregate attention maps across all heads and layers in one model by adding them together and apply the map with a scaling factor of 0.25 and a max clipping of 1.0 for clearer visualization. As shown in Fig. \ref{fig:attn}, single-scale LM shows significant recency bias, where each speech frame pays much more attention to the nearest speech tokens and text tokens only relevant to the current pronunciation. However, in CoFi-Speech-CoS, the high-scale sequence generation presents wider attention to the text and speech context, effectively modeling coarse-grained information. It then guides the next-scale sequence generation to render fine-grained details. Similarly, CoFi-Speech-SoS employs multiple LMs to achieve coarse-to-fine generation. The first LM absorbs richer contextual information to generate the high-scale sequence and guides the next LMs to generate lower-scale sequences recursively. This validates the effectiveness of `speaking from coarse to fine` in addressing ``recency bias'' via explicit multi-scale modeling.
+
 ## 6.Conclusions: 结论
