--- a/Models/Speech_LLM/2024.09.18_CoFi-Speech.md
+++ b/Models/Speech_LLM/2024.09.18_CoFi-Speech.md
@@ -7,10 +7,10 @@
 > The neural codec language model (CLM) has demonstrated remarkable performance in text-to-speech (TTS) synthesis. 
 > However, troubled by `recency bias`, CLM lacks sufficient attention to coarse-grained information at a higher temporal scale, often producing unnatural or even unintelligible speech. 
 > This work proposes CoFi-Speech, a coarse-to-fine CLM-TTS approach, employing multi-scale speech coding and generation to address this issue. 
-> We train a multi-scale neural codec, CoFi-Codec, to encode speech into a multi-scale discrete representation, comprising multiple token sequences with different time resolutions. 
-> Then, we propose CoFi-LM that can generate this representation in two modes: the single-LM-based chain-of-scale generation and the multiple-LM-based stack-of-scale generation. 
+> We train a multi-scale neural codec, ***CoFi-Codec***, to encode speech into a multi-scale discrete representation, comprising multiple token sequences with different time resolutions. 
+> Then, we propose ***CoFi-LM*** that can generate this representation in two modes: the single-LM-based chain-of-scale generation and the multiple-LM-based stack-of-scale generation. 
 > In experiments, CoFi-Speech significantly outperforms single-scale baseline systems on naturalness and speaker similarity in zero-shot TTS. 
-> The analysis of multi-scale coding demonstrates the effectiveness of CoFi-Codec in learning multi-scale discrete speech representations while keeping high-quality speech reconstruction. 
+> The analysis of multi-scale coding demonstrates the effectiveness of ***CoFi-Codec*** in learning multi-scale discrete speech representations while keeping high-quality speech reconstruction. 
 > The coarse-to-fine multi-scale generation, especially for the stack-of-scale approach, is also validated as a crucial approach in pursuing a high-quality neural codec language model for TTS.
 
 ## 1.Introduction: 引言
@@ -31,7 +31,7 @@
 > This dilemma implies the necessity of applying guidance to LMs to pay sufficient attention to both coarse-grained and fine-grained information of speech. 
 >
 > In this work, we propose a novel CLM-based zero-shot TTS approach, CoFi-Speech, that generates speech in a coarse-to-fine manner via a multi-scale speech coding and generation approach. 
-> In this framework, the multi-scale speech codec, CoFi-Codec, decomposes speech into multiple discrete sequences with different temporal resolutions and decodes them back with a high reconstruction quality. 
+> In this framework, the multi-scale speech codec, ***CoFi-Codec***, decomposes speech into multiple discrete sequences with different temporal resolutions and decodes them back with a high reconstruction quality. 
 > Then, we propose two LM-based approaches to predict this multi-scale speech representation from coarse to fine: single-LM-based chain-of-scale generation and multiple-LM-based stack-of-scale generation. 
 > In experiments, we present subjective and objective evaluations to demonstrate that CoFi-Speech significantly outperforms baseline systems based on single-scale speech sequences on naturalness and similarity, where stack-of-scale generation performs best. 
 > Finally, we conduct detailed ablation studies to analyze multi-scale coding and generation, to further validate the effectiveness of `speaking from coarse to fine` in achieving high-quality CLM-based TTS.
@@ -42,8 +42,8 @@
 
 ### CoFi-Codec
 
-> CoFi-Codec aims to decompose speech into multiple discrete sequences with different resolutions to provide a multi-scale speech representation. 
-> Fig. \ref{fig:cofi} (a) presents a three-scale CoFi-Codec model architecture. 
+> ***CoFi-Codec*** aims to decompose speech into multiple discrete sequences with different resolutions to provide a multi-scale speech representation. 
+> Fig. \ref{fig:cofi} (a) presents a three-scale ***CoFi-Codec*** model architecture. 
 > We first convert speech signals into the Mel spectrogram, and employ multiple encoder blocks to down-sample it into sequences at different temporal scales. 
 > Specifically, each encoder block is applied with a 1-D convolutional ResNet block and a strided convolutional layer for down-sampling. 
 > Meanwhile, we follow SoCodec \cite{socodec} to apply an ECAPA-TDNN-based \cite{dawalatabad2021ecapa} reference encoder to extract a global embedding $g$ from the Mel spectrogram to capture time-invariant information, e.g., speaker identity, global speaking style, acoustic environment, etc.
@@ -61,7 +61,7 @@
 > nothing is preserved in the sequence. 
 > Hence, we propose scale-wise nested dropout (SWND), which masks quantized sequences $\mathbf{s}_{1:b}$ given an index $b$ randomly sampled from $[0, N_s - 1]$, where $b=0$ indicates that no sequence is masked. 
 > This approach forces high-scale sequence to preserve effective information for reconstruction, avoiding representation collapse. 
-> Moreover, we apply GAN training \cite{li2024single, socodec} on CoFi-Codec to improve the generation quality of the Mel spectrogram. 
+> Moreover, we apply GAN training \cite{li2024single, socodec} on ***CoFi-Codec*** to improve the generation quality of the Mel spectrogram. 
 > The loss function is written as follows:
 
 $$
@@ -76,7 +76,7 @@ $$
 
 ### CoFi-LM
 
-> To predict the multi-scale discrete representation in a coarse-to-fine manner, we propose CoFi-LM in two styles: chain-of-scale (CoS) generation and stack-of-scale (SoS) generation.
+> To predict the multi-scale discrete representation in a coarse-to-fine manner, we propose ***CoFi-LM*** in two styles: chain-of-scale (CoS) generation and stack-of-scale (SoS) generation.
 
 > **Chain-of-scale generation** is a simple extension of CLM to the multi-scale speech representation, which employs one LM to predict speech sequences in descending order of the temporal scale, as shown in Fig. \ref{fig:cofi} (b). 
 > In training, the text and speech sequences are embedded into the same space and processed by a decoder-only Transformer to estimate the probabilities of the next speech tokens. 
@@ -92,7 +92,7 @@ $$
 > In this way, we recursively generate all speech sequences from coarse to fine. 
 > This stage-wise approach enables us to better model multi-scale information while avoiding introducing long context to transformers.
 
-> Finally, we apply in-context learning (ICL) \cite{anastassiou2024seed, du2024cosyvoice} to CoFi-LMs for zero-shot TTS. 
+> Finally, we apply in-context learning (ICL) \cite{anastassiou2024seed, du2024cosyvoice} to ***CoFi-LM***s for zero-shot TTS. 
 > Specifically, we extract speaker embedding and speech tokens from the reference audio as speech prompts. 
 > The transcript of the reference audio is also concatenated with the input text as the text prompt.
 
@@ -104,8 +104,8 @@ $$
 > All audio files are normalized to the sample rate of 16kHz and converted to 80-dim Mel spectrograms with a frameshift of 10ms. 
 > We create a byte-pair encoding (BPE) based text dictionary with 8192 tokens to encode the text.
 >
-> CoFi-Codec is applied with 512-dim ResNet modules, each consisting of four residual units with two 1-D convolutional layers. $\text{enc}_1$ and $\text{dec}_1$ are applied with four more residual units to better encode and reconstruct Mel spectrograms. 
-> We train a three-scale CoFi-Codec with ordered product quantization (OPQ) \cite{socodec} to compress the Mel spectrogram into two single-stream sequences with frameshifts of 120ms and 40ms and one four-stream sequence with a frameshift of 20ms. 
+> ***CoFi-Codec*** is applied with 512-dim ResNet modules, each consisting of four residual units with two 1-D convolutional layers. $\text{enc}_1$ and $\text{dec}_1$ are applied with four more residual units to better encode and reconstruct Mel spectrograms. 
+> We train a three-scale ***CoFi-Codec*** with ordered product quantization (OPQ) \cite{socodec} to compress the Mel spectrogram into two single-stream sequences with frameshifts of 120ms and 40ms and one four-stream sequence with a frameshift of 20ms. 
 > Each stream in each sequence has a codebook with 16,384 codewords. 
 > In training, we set $\lambda_{vq}=1, \lambda_{reg}=1, \lambda_{adv}=0.1$ and use EMA \cite{vqvae} to update codebooks with the decay rate of 0.99. 
 > The discriminator in Mega-TTS \cite{jiang2023mega} is employed for adversarial training. 
@@ -115,7 +115,7 @@ $$
 > LMs are applied with 12-layer decoder-only Transformers with a feature dimension of 1024. 
 > For multi-stream speech sequences, we apply a `delay pattern`. 
 > We employ the sampling strategy with a top-p of 0.8, a top-k of 50, and a repetition penalty of 2.0. 
-> CoFi-Codec and LMs are trained using AdamW \cite{Loshchilov2018} for 100k iterations with a batch size of 1.6k seconds. 
+> ***CoFi-Codec*** and LMs are trained using AdamW \cite{Loshchilov2018} for 100k iterations with a batch size of 1.6k seconds. 
 > The learning rate exponentially decays from $3\times10^{-4}$ to $1\times10^{-4}$. %\footnote{The implementation and checkpoint of our proposed system will be released after the double-blind peer review.}
 
 ### Evaluation Metrics
@@ -141,13 +141,13 @@ $$
 
 ### Multi-Scale Speech Coding
 
-> We conduct objective evaluations to investigate if CoFi-Codec can decompose speech into sequences at multiple temporal scales while keeping high reconstruction quality. 
+> We conduct objective evaluations to investigate if ***CoFi-Codec*** can decompose speech into sequences at multiple temporal scales while keeping high reconstruction quality. 
 > As shown in Fig. \ref{fig:msc}, we evaluate speech reconstructed from top-$b$ scales. 
-> For example, for a three-scale CoFi-Codec, `$b=2$` means that we only reconstruct speech using $\textbf{s}^3$ and $\textbf{s}^2$, and mask $\textbf{s}^1$ with all-zero vectors. 
-> The result demonstrates that CoFi-Codec learns a good multi-scale representation with the help of SWND. 
+> For example, for a three-scale ***CoFi-Codec***, `$b=2$` means that we only reconstruct speech using $\textbf{s}^3$ and $\textbf{s}^2$, and mask $\textbf{s}^1$ with all-zero vectors. 
+> The result demonstrates that ***CoFi-Codec*** learns a good multi-scale representation with the help of SWND. 
 > The high-scale sequence preserves more effective information, presenting lower reconstruction loss over that of codec without SWND. 
-> Moreover, compared with the single-scale CoFi-Codec and Encodec \cite{encodec} with a four-stream sequence on a frameshift of 20ms, CoFi-Codec presents the lowest MCD and CER. 
-> This result validates CoFi-Codec as the expected codec, providing multi-scale discrete speech representation and keeping high reconstruction quality.
+> Moreover, compared with the single-scale ***CoFi-Codec*** and Encodec \cite{encodec} with a four-stream sequence on a frameshift of 20ms, ***CoFi-Codec*** presents the lowest MCD and CER. 
+> This result validates ***CoFi-Codec*** as the expected codec, providing multi-scale discrete speech representation and keeping high reconstruction quality.
 
 ### Recency Bias: Attention Visualization
 
@@ -163,7 +163,7 @@ $$
 ## 6.Conclusions: 结论
 
 > This work introduces CoFi-Speech, a novel approach to enhance CLM-based TTS through coarse-to-fine generation. 
-> The framework comprises two key components: 1) CoFi-Codec, a multi-scale speech codec that encodes speech into the discrete, multi-scale representation and decodes them back, and 2) CoFi-LM, which predicts this representation using two strategies: single-LM-based chain-of-scale generation and multiple-LM-based stack-of-scale generation. 
+> The framework comprises two key components: 1) ***CoFi-Codec***, a multi-scale speech codec that encodes speech into the discrete, multi-scale representation and decodes them back, and 2) ***CoFi-LM***, which predicts this representation using two strategies: single-LM-based chain-of-scale generation and multiple-LM-based stack-of-scale generation. 
 > The zero-shot TTS experiment demonstrates that CoFi-Speech, especially for the stack-of-scale approach, significantly outperforms baseline systems using single-scale speech sequences in terms of naturalness and speaker similarity. 
-> The ablation study further validates that: 1) CoFi-Codec is capable of learning multi-scale discrete representations while preserving high-quality speech reconstruction, and 2) CoFi-LM effectively improves TTS performance via explicit multi-scale modeling. 
+> The ablation study further validates that: 1) ***CoFi-Codec*** is capable of learning multi-scale discrete representations while preserving high-quality speech reconstruction, and 2) ***CoFi-LM*** effectively improves TTS performance via explicit multi-scale modeling. 
 > Finally, the attention visualization substantiates the efficacy of our approach in addressing `recency bias`, providing compelling evidence for its effectiveness in improving CLM-based TTS.
