--- a/Models/Speech_LLM/2024.08.05_LSLM.md
+++ b/Models/Speech_LLM/2024.08.05_LSLM.md
@@ -88,7 +88,7 @@
 <summary>原文</summary>
 
 > Dialogue is the most natural way of **Human-Computer Interaction (HCI)**. 
-> With the rapid development of [GPT-style [29]](../LLM/GPT.md) large language models (LLM) and the scaling of [Transformer [39]](../_Transformer/2017.06.12_Transformer.md)-style architectures, textual conversational AI, such as ChatGPT ([InstrcutGPT [27]](../LLM/InstructGPT.md), [GPT-4 [01]](../LLM/GPT-4.md)) and [LLaMA [36]](../LLM/2023.02.27_LLaMA.md), [LLaMA2 [37]](../LLM/2023.07.18_LLaMA2.md), have become a significant part of daily life. 
+> With the rapid development of [GPT-style [29]](../LLM/GPT.md) large language models (LLM) and the scaling of [Transformer [39]](../_Transformer/2017.06.12_Transformer.md)-style architectures, textual conversational AI, such as ChatGPT ([InstrcutGPT [27]](../LLM/InstructGPT.md), [GPT-4 [01]](../LLM/2023.03.15_GPT-4.md)) and [LLaMA [36]](../LLM/2023.02.27_LLaMA.md), [LLaMA2 [37]](../LLM/2023.07.18_LLaMA2.md), have become a significant part of daily life. 
 > However, these models are limited to text input and output and cannot interact directly with humans in arbitrary scenarios.
 >
 > Incorporating spoken and auditory interfaces into conversational AI enhances HCI convenience. 
@@ -136,7 +136,7 @@
 
 对话是**人机交互 (Human-Computer Interaction, HCI)** 最自然的方式.
 
-随着 [GPT 类型 [29]](../LLM/GPT.md) 的大型语言模型（LLM）的迅速发展和 [Transformer 类型 [39]](../_Transformer/2017.06.12_Transformer.md) 架构的扩展, 文本对话 AI, 如 ChatGPT ([InstrcutGPT [27]](../LLM/InstructGPT.md); [GPT-4 [01]](../LLM/GPT-4.md)) 和 LLaMA ([LLaMA [36]](../LLM/2023.02.27_LLaMA.md); [LLaMA2 [37]](../LLM/2023.07.18_LLaMA2.md)), 已经成为日常生活的重要组成部分.
+随着 [GPT 类型 [29]](../LLM/GPT.md) 的大型语言模型（LLM）的迅速发展和 [Transformer 类型 [39]](../_Transformer/2017.06.12_Transformer.md) 架构的扩展, 文本对话 AI, 如 ChatGPT ([InstrcutGPT [27]](../LLM/InstructGPT.md); [GPT-4 [01]](../LLM/2023.03.15_GPT-4.md)) 和 LLaMA ([LLaMA [36]](../LLM/2023.02.27_LLaMA.md); [LLaMA2 [37]](../LLM/2023.07.18_LLaMA2.md)), 已经成为日常生活的重要组成部分.
 然而, 这些模型仅限于文本输入和输出, 无法在任意场景中直接与人类交互.
 
 将语音和听觉接口融入对话 AI 增强了人机交互的便利性。
@@ -214,7 +214,7 @@ D. 全双工语音语言模型 (同时听说能力).
 > Despite their growing power and versatility, simplex SLMs are limited to one-way communication (either human $\rightarrow$ machine or machine $\rightarrow$ human). 
 > LLMs have facilitated a paradigm shift from simplex models to half-duplex models, also known as turn-based models, as shown in Figure.01(C).
 > Prominent models include [SpeechGPT [48]](2023.05.18_SpeechGPT.md), [LauraGPT [05]](2023.10.07_LauraGPT.md), and [VioLA [42]](2023.05.25_VioLA.md). 
-> While these half duplex models can both listen and spea
+> While these half duplex models can both listen and speak, they are constrained to performing only one action at the same instant, thus failing to address the turn-taking problem. 
 
 </details>
 <br>
