--- a/Models/Diffusion/2021.12.20_LDM.md
+++ b/Models/Diffusion/2021.12.20_LDM.md
@@ -1,6 +1,6 @@
 # LDM/Stable Diffusion
 
-- 标题: High-Resolution Image Synthesis with Latent Diffusion Models
+- 标题: "High-Resolution Image Synthesis with Latent Diffusion Models"
 - 作者: 
   - 01 Robin Rombach
   - 02 Andreas Blattmann
@@ -42,4 +42,4 @@
 与先前的工作相比, 在这种表示上训练扩散模型首次能够在复杂性降低和细节保留之间达到近乎最优的平衡点, 大大提高了视觉保真度.
 通过在模型架构中引入交叉注意力层, 我们将扩散模型转变为强大且灵活的生成器, 适用于一般的条件输入, 如文本或边界框, 而且以卷积方式实现高分辨率合成成为可能.
 
-我们的***潜在扩散模型 (Latent Diffusion Model, LDM)*** 在图像修复方面实现了新的最先进水平, 并在各种任务中展现出色, 包括无条件图像生成, 语义场景合成和超分辨率, 同时相比基于像素的扩散模型显著降低了计算需求.
+我们的 ***潜在扩散模型 (Latent Diffusion Model, LDM)*** 在图像修复方面实现了新的最先进水平, 并在各种任务中展现出色, 包括无条件图像生成, 语义场景合成和超分辨率, 同时相比基于像素的扩散模型显著降低了计算需求.
