--- a/Models/Speech_Neural_Codec/2024.09.20_MuCodec.md
+++ b/Models/Speech_Neural_Codec/2024.09.20_MuCodec.md
@@ -41,6 +41,18 @@ Code and Demo: https://xuyaoxun.github.io/MuCodec_demo/.
 
 ## 1.Introduction: 引言
 
+Music codecs\cite{codec1,codec2,codec3} are a crucial component in the field of audio codec\cite{audiocodec1,audiocodec2,audiocodec3} research. The significance of ultra low-bitrate compression lies in its potential applications, such as music transmission, where the bitrate of MP3\cite{casas2021mp3} is considerably high, and music generation\cite{copet2024musicgen,gao2024endtoendapproachchordconditionedsong,lei2024songcreatorlyricsbaseduniversalsong}, where short sequences are highly effective for language model construction. Furthermore, considering the diversity of background, sound events, and vocals in music, achieving high-fidelity reconstruction at ultra low bitrates would signify a substantial advancement in the field of universal audio generation.
+
+Recent music compression techniques based on neural codecs\cite{nerualcodec1,nerualcodec2,nerualcodec3,nerualcodec4,nerualcodec5} attempt to compress music directly into discrete tokens. While discrete representations often yield higher compression densities, they inherently suffer from substantial information loss. To reconstruct a more accurate approximation of the original features from discrete tokens, a more robust representation and a stronger decoder are necessary. Common codecs like Encodec\cite{encodec} and Generative Adversarial Networks(GAN)-based methods\cite{gan1,gan2,gan3} exhibit limitations in achieving particularly low bitrates.
+
+In recent years, some research and works have focused on using semantic modeling to represent musical characteristics and utilizing diffusion\cite{diffusion} for reconstruction, such as SemantiCodec\cite{liu2024semanticodec} and SEED-TTS\cite{anastassiou2024seed}. However, these models are not specifically designed for music-related tasks. Compared to speech tasks, music has a rich background, including instruments like piano and bass, and vocals that should be clearly discernible from the background music. Therefore, it is essential to consider both semantic and acoustic information; focusing solely on one aspect would compromise the overall perceptual quality of the reconstructed audio.
+
+To address these challenges, we propose a flow-matching-based\cite{lipman2022flow} music codec MuCodec. MuCodec uses a specialized feature extractor, MuEncoder, based on the two key aspects of music: vocals and background. The MuEncoder features are then discretized using RVQ and employed as conditions for reconstructing Mel-VAE features via flow-matching. We reconstruct the Mel spectrogram by passing the Mel-VAE features through a pre-trained Mel-VAE decoder\cite{liu2024audioldm2}, and ultimately, the music is reconstructed using HiFi-GAN\cite{kong2020hifi}. Our contributions can be summarized as follows:
+
+- We propose MuCodec, which achieves the lowest bitrate to date while maintaining the highest-quality music reconstruction capabilities. 
+- MuCodec employs MuEncoder as the feature extractor and Diffusion Transformer (DiT) \cite{dit} along with flow-matching-based method for fine-grained music modeling.
+- Both subjective and objective experiments demonstrate that MuCodec achieves the best performance to date in music reconstruction tasks at both low and high bitrates.
+
 ## 2.Related Works: 相关工作
 
 ## 3.Methodology: 方法
