--- a/Models/Speech_Neural_Codec/2024.09.20_MuCodec.md
+++ b/Models/Speech_Neural_Codec/2024.09.20_MuCodec.md
@@ -108,4 +108,40 @@ During inference, we choose a denoising step size of 50 for flow-matching to bal
 
 ## 5.Results: 结果
 
+### Main Comparation
+
+In this experiment, we offer a thorough comparison of various prevalent reconstruction methods. MuCodec undergoes an in-depth comparative analysis from both objective and subjective assessments, with objective results in TABLE I.
+
+First, it can be observed that DAC+GAN and MuEncoder+GAN method underperform in low-bitrate music reconstruction tasks, despite 120k training steps, which exceed other tasks.
+
+Second, a difference between MuEncoder+Diffusion and MuCodec in low-bitrate music reconstruction tasks can be noticed. While MuEncoder+Diffusion outperforms GAN and MuEncoder+GAN, it falls short compared to MuCodec. This is because MuCodec employs the flow-matching method, which more directly and effectively models the noise-to-target distribution path compared to diffusion methods, achieving better results with fewer reconstruction steps.
+
+Lastly, in the low-bitrate (0.35kbps) scenario, SemantiCodec's performance is subpar. Despite its state-of-the-art performance in acoustic event reconstruction, it lacks a dedicated design for music reconstruction tasks. Hence, its performance significantly decreases when handling more complex music reconstruction tasks compared to MuCodec. Furthermore, SemantiCodec only supports single-channel audio reconstruction at a 16k sampling rate, while MuCodec supports dual-channel audio at a 48k sampling rate, providing a greater advantage in music reconstruction.
+
+At a higher bitrate (1.33kbps), MuCodec's performance continues to surpass other methods, showing the same trend as in the low-bitrate scenario. This demonstrates that MuCodec not only excels in low-bitrate scenarios but also delivers desirable results in high-bitrate music reconstruction tasks.
+
+Moreover, we can observe from the table that when the training steps of MuCodec are increased to 200k, its performance improves further. However, a training step size of 20k already achieves a considerable level, highlighting MuCodec's robust compression and reconstruction capabilities.
+
+Regarding the subjective results in Fig. 2, it is observed that the DAC+GAN method falls short in terms of audio quality at both low and high bitrates, indicating limited fine-grained modeling capability. In contrast, SemantiCodec shows a noticeable improvement over DAC+GAN method and performs better at high bitrates than low bitrates. However, despite its superior performance in acoustic event and speech reconstruction, the music reconstruction remains unsatisfactory, reflecting the challenges of music reconstruction tasks.
+
+In comparison, our proposed MuCodec achieves excellent reconstruction results at both low and high bitrates, significantly outperforming SemantiCodec and DAC+GAN methods and closely resembling the original music. Moreover, the small difference between low and high bitrate MUSHRA scores suggests that MuCodec already attains a highly desirable reconstruction effect at extremely low bitrates. 
+
+### Impact of Different MuEncoder Training Losses
+
+In this experiment, we evaluate the impact of MuEncoder on MuCodec under different loss conditions. Experiment \#1 uses only the Mask Language Model loss (MLM Loss). Experiment \#2 adds reconstruction loss (Recons Loss) to \#1, including Mel spectrogram and CQT feature reconstruction loss. Experiment \#3 incorporates lyrics recognition loss (ASR loss) based on \#2, with specific results shown in TABLE II.
+
+The results show that compared to \#1, ViSQOL and speaker similarity indicators improve in \#2 due to the additional reconstruction loss, while WER slightly decreases. This suggests that reconstruction loss enhances audio quality but has limited impact on vocal modeling. Comparing \#3 to \#2 reveals a significant WER reduction after adding recognition loss, benefiting vocal modeling and providing some support to ViSQOL and speaker similarity. This highlights that introducing reconstruction and recognition losses during training improves MuCodec's performance in music reconstruction tasks. 
+
+### Influence of MuEncoder Layer Selection
+
+The results indicate that music reconstructed with lower MuEncoder layer features has better ViSQOL and speaker similarity indicators. As the number of MuEncoder layers increases, the reconstructed music quality decreases, while vocal clarity improves. This suggests that lower MuEncoder layers have stronger acoustic characteristics aiding in background music reconstruction, and higher layers contain more semantic features supporting vocal reconstruction. Therefore, in practice, the choice of MuEncoder layers needs to balance specific requirements, leading us to select the 7th layer as a balanced option in our experiments. 
+
+### Validation Experiment for Disentangling Acoustic and Semantic Features
+
+In this experiment, we analyze the comparison between separate modeling and MuEncoder. We select the high-bitrate scenario in disentangle experiments to match MuCodec's high-bitrate case (1.33kbps). Separate HuBERT and MERT experiments use 4 codebooks, each with a size of 10,000, while joint modeling experiments with HuBERT and MERT allocate 2 codebooks for each model, each containing 10,000 elements. Specific results are detailed in TABLE IV.
+
+It can be found that using HuBERT alone results in relatively low ViSQOL and speaker similarity, suggesting its inability to effectively model rich backgrounds. Using MERT alone improves audio quality and background but slightly decreases vocal clarity. Jointly modeling HuBERT and MERT features improves both background and vocal clarity without increasing bitrate. This suggests that jointly modeling vocals and background positively impacts overall music reconstruction but introduces additional computational complexity.
+
+In contrast, using only MuEncoder yields better music reconstruction results than separate HuBERT+MERT and requires modeling only one type of feature. This makes it more suitable for modeling, prediction, and music generation tasks. 
+
 ## 6.Conclusions: 结论
