--- a/Models/Speech_Neural_Codec/2024.09.20_MuCodec.md
+++ b/Models/Speech_Neural_Codec/2024.09.20_MuCodec.md
@@ -70,7 +70,9 @@ Our contributions can be summarized as follows:
 
 ## 3.Methodology: 方法
 
-As illustrated in Fig. 1, ***MuCodec*** comprises ***MuEncoder***, RVQ, a reconstruction model using flow-matching, Mel-VAE decoder, and HiFi-GAN. 
+![](Images/2024.09.20_MuCodec_Fig.01.png)
+
+As illustrated in Fig.01, ***MuCodec*** comprises ***MuEncoder***, RVQ, a reconstruction model using flow-matching, Mel-VAE decoder, and HiFi-GAN. 
 ***MuEncoder*** is a music extractor, primarily responsible for extracting both acoustic and semantic representations that better capture the characteristics of music. 
 RVQ compresses the representations obtained from ***MuEncoder***. 
 The objective of flow-matching is to reconstruct low-bitrate discrete representations to obtain Mel-VAE features. 
@@ -177,7 +179,7 @@ This demonstrates that ***MuCodec*** not only excels in low-bitrate scenarios bu
 Moreover, we can observe from the table that when the training steps of ***MuCodec*** are increased to 200k, its performance improves further. 
 However, a training step size of 20k already achieves a considerable level, highlighting ***MuCodec***'s robust compression and reconstruction capabilities.
 
-Regarding the subjective results in Fig. 2, it is observed that the DAC+GAN method falls short in terms of audio quality at both low and high bitrates, indicating limited fine-grained modeling capability. 
+Regarding the subjective results in Fig.02, it is observed that the DAC+GAN method falls short in terms of audio quality at both low and high bitrates, indicating limited fine-grained modeling capability. 
 In contrast, SemantiCodec shows a noticeable improvement over DAC+GAN method and performs better at high bitrates than low bitrates. 
 However, despite its superior performance in acoustic event and speech reconstruction, the music reconstruction remains unsatisfactory, reflecting the challenges of music reconstruction tasks.
 
