--- a/Models/Speech_Neural_Codec/2024.09.18_LFSC.md
+++ b/Models/Speech_Neural_Codec/2024.09.18_LFSC.md
@@ -1,13 +1,41 @@
 # LFSC (Low Frame-rate Speech Codec)
 
-- 标题: Low Frame-rate Speech Codec: a Codec Designed for Fast High-quality Speech LLM Training and Inference
+<details>
+<summary>基本信息</summary>
+
+- 标题: "Low Frame-rate Speech Codec: a Codec Designed for Fast High-quality Speech LLM Training and Inference"
+- 作者: 
+  - 01 Edresson Casanova - NVIDIA Corporation
+  - 02 Ryan Langman - NVIDIA Corporation
+  - 03 Paarth Neekhara - NVIDIA Corporation
+  - 04 Shehzeen Hussain - NVIDIA Corporation
+  - 05 Jason Li - NVIDIA Corporation
+  - 06 Subhankar Ghosh - NVIDIA Corporation
+  - 07 Ante Jukic - NVIDIA Corporation
+  - 08 Sang-gil Lee - NVIDIA Corporation
+- 链接: 
+  - [ArXiv](https://arxiv.org/abs/2409.12117)
+  - [Publication]() #TODO Submitted to ICASSP2025
+  - [Github](https://github.com/NVIDIA/NeMo)
+  - [Demo](https://edresson.github.io/Low-Frame-rate-Speech-Codec)
+- 文件: 
+  - [ArXiv](_PDF/2409.12117v1__LFSC__Low_Frame-rate_Speech_Codec_A_Codec_Designed_for_Fast_High-Quality_Speech_LLM_Training_and_Inference.pdf)
+  - [Publication] #TODO
+
+</details>
 
 ## Abstract: 摘要
+
+<details>
+<summary>展开原文</summary>
 
 Large language models (LLMs) have significantly advanced audio processing through audio codecs that convert audio into discrete tokens, enabling the application of language modeling techniques to audio data. 
 However, audio codecs often operate at high frame rates, resulting in slow training and inference, especially for autoregressive models. 
 To address this challenge, we present the ***Low Frame-rate Speech Codec (LFSC)***: a neural audio codec that leverages finite scalar quantization and adversarial training with large speech language models to achieve high-quality audio compression with a 1.89 kbps bitrate and 21.5 frames per second. 
 We demonstrate that our novel codec can make the inference of LLM-based text-to-speech models around three times faster while improving intelligibility and producing quality comparable to previous models.
+
+</details>
+<br>
 
 大型语言模型通过将音频转换为离散 Tokens 的音频编解码器显著推进了音频处理技术, 使得语言建模技术能够应用于音频数据.
 然而, 音频编解码器通常以高帧率运行, 导致训练和推理速度缓慢, 尤其是对于自回归模型.
