--- a/Models/SVS/2024.06.12_TokSing.md
+++ b/Models/SVS/2024.06.12_TokSing.md
@@ -138,7 +138,7 @@
 </details>
 <br>
 
-![](Images/2024.06.12.TokSing.Fig.01.png)
+![](../SVS/Images/2024.06.12.TokSing.Fig.01.png)
 
 
 > Figure 1: Discrete-based SVS system architecture. The system contains three parts: a token formulator, a musical encoder and a vocoder. LF0, the logarithm of the fundamental frequency melody signal, serves as the melody signal. The ablations of melody prediction modules (purple blocks) and melody enhancing module (pink block) are discussed in Section 3.4. dji represents discrete token.
@@ -159,7 +159,7 @@
 > [SoundStream](../../Models/Speech_Neural_Codec/2021.07.07_SoundStream.md) introduces a residual vector quantizer (RVQ) and can reconstruct audios from multi-layer Codec tokens with Codec decoder.
 > The other way involves quantizing tokens through clustering the hidden embeddings of SSL models.
 > The pre-training task and the corpus of these models directly influence token generation.
-> Previous research on speech understanding tasks ([WavLM](../../Models/Speech_Representaion/2021.10.26_WavLM.md); [Multi-Resolution_HuBERT](../Speech_Representaion/2023.10.04_MR-HuBERT.md); [MMM](../../Models/_tmp/MMM.md)) suggests that different hidden layers contain diverse information suitable for various downstream tasks, with shallow layers focusing more on identity and deeper layers on content-related features.
+> Previous research on speech understanding tasks ([WavLM](../../Models/Speech_Representaion/2021.10.26_WavLM.md); [Multi-Resolution_HuBERT](../Speech_Representaion/2023.10.04_MR-HuBERT.md); [MMM](../Speech_Representaion/2024.06.14_MMM.md)) suggests that different hidden layers contain diverse information suitable for various downstream tasks, with shallow layers focusing more on identity and deeper layers on content-related features.
 > We leverage and compare these tokens for SVS task.
 
 </details>
@@ -170,14 +170,14 @@
 [SoundStream](../../Models/Speech_Neural_Codec/2021.07.07_SoundStream.md)引入了残差向量量化器 (RVQ) , 并能够从多层编解码器标识符中通过编解码器解码器重建音频.
 另一种方法涉及通过聚类SSL模型的隐藏嵌入来量化标识符.
 这些模型的预训练任务和语料库直接影响标识符的生成.
-先前关于语音理解任务的研究 ([WavLM](../../Models/Speech_Representaion/2021.10.26_WavLM.md)；[Multi-Resolution_HuBERT](../Speech_Representaion/2023.10.04_MR-HuBERT.md)；[MMM](../../Models/_tmp/MMM.md)) 表明, 不同的隐藏层包含适合各种下游任务的多样化信息, 其中浅层更多关注身份特征, 而深层更多关注与内容相关的特征.
+先前关于语音理解任务的研究 ([WavLM](../../Models/Speech_Representaion/2021.10.26_WavLM.md)；[Multi-Resolution_HuBERT](../Speech_Representaion/2023.10.04_MR-HuBERT.md)；[MMM](../Speech_Representaion/2024.06.14_MMM.md)) 表明, 不同的隐藏层包含适合各种下游任务的多样化信息, 其中浅层更多关注身份特征, 而深层更多关注与内容相关的特征.
 我们利用并比较这些标识符用于SVS任务.
 
 <details>
 <summary>原文</summary>
 
 > These tokens can serve as intermediate representations, however, the information conveyed by a single token is limited.
-> Inspired by [MMM](../../Models/_tmp/MMM.md), we propose a more flexible token formulation that involves blending tokens, which can be categorized into three basic types as in Figure 2: Type 1 involves selecting tokens from different layers of the same SSL model.
+> Inspired by [MMM](../Speech_Representaion/2024.06.14_MMM.md), we propose a more flexible token formulation that involves blending tokens, which can be categorized into three basic types as in Figure 2: Type 1 involves selecting tokens from different layers of the same SSL model.
 > Type 2 contains tokens from different SSL models that may relate to different pre-training corpora and tasks, taking advantages from different SSL models without additional training overhead.
 > Lastly, by using RVQ, multiple-layer tokens can be obtained from the hidden embeddings of SSL models in a residual manner.
 > Alternatively, we can utilize codec tokens directly obtained from audio encoders pre-trained on large-scale corpora ([SoundStream](../../Models/Speech_Neural_Codec/2021.07.07_SoundStream.md); [EnCodec](../../Models/Speech_Neural_Codec/2022.10.24_EnCodec.md)).
@@ -186,10 +186,10 @@
 </details>
 <br>
 
-![](Images/2024.06.12.TokSing.Fig.02.png)
+![](../SVS/Images/2024.06.12.TokSing.Fig.02.png)
 
 这些标识符可以作为中间表示, 然而, 单个标识符传达的信息是有限的.
-受 [MMM](../../Models/_tmp/MMM.md) 启发, 我们提出了一种更灵活的标识符构成方法, 涉及标识符混合, 如图2所示, 可以分为三种基本类型：类型1涉及从同一SSL模型的不同层中选择标识符.
+受 [MMM](../Speech_Representaion/2024.06.14_MMM.md) 启发, 我们提出了一种更灵活的标识符构成方法, 涉及标识符混合, 如图2所示, 可以分为三种基本类型：类型1涉及从同一SSL模型的不同层中选择标识符.
 类型2包含来自不同SSL模型的标识符, 这些模型可能与不同的预训练语料库和任务相关, 利用不同SSL模型的优势而不增加额外的训练开销.
 最后, 通过使用RVQ, 可以从SSL模型的隐藏嵌入中以残差方式获得多层标识符.
 或者, 我们可以直接利用从大规模语料库上预训练的音频编码器获得的编解码器标识符 ([SoundStream](../../Models/Speech_Neural_Codec/2021.07.07_SoundStream.md)；[EnCodec](../../Models/Speech_Neural_Codec/2022.10.24_EnCodec.md)) .
@@ -281,7 +281,7 @@ SVS需要遵循乐谱指定的时序变化, 这要求在持续时间预测方面
 > #### Model configurations: 
 > The musical encoder adopts a NAR architecture in [FastSpeech](../../Models/TTS2_Acoustic/2019.05.22_FastSpeech.md) with an explicit duration predictor.
 > The encoding and decoding of score utilize a transformer based structure following [Xiaoicesing](2020.06.11_Xiaoicesing.md), employing a 384-dim embedding layer to encode lyrics, pitches, and durations from music scores.
-> The prediction of melody aligns with [VISinger](../../Models/Singing_Voice/2021.10.17_VISinger.md) and the ground-truth melody signals are extracted from raw audios using pyworld 4 and computed by natural logarithm.
+> The prediction of melody aligns with [VISinger](2021.10.17_VISinger.md) and the ground-truth melody signals are extracted from raw audios using pyworld 4 and computed by natural logarithm.
 > The predicted ones are passed through a simple fully connected network (pink block in Figure 1) to the token predictor.
 > In vocoder, a 768-dim and a 256dim embedding layer are used to encode the token and melody signal, respectively.
 > The parameters of the generator and discriminator are consistent with [HiFi-GAN](../../Models/TTS3_Vocoder/2020.10.12_HiFi-GAN.md).
@@ -318,7 +318,7 @@ SVS需要遵循乐谱指定的时序变化, 这要求在持续时间预测方面
 最终, 我们为单歌手数据集设置了128个聚类中心, 为多歌手数据集设置了1024个聚类中心.
 模型配置：音乐编码器采用了 [FastSpeech](../../Models/TTS2_Acoustic/2019.05.22_FastSpeech.md) 中的 NAR 架构, 具有明确的持续时间预测器.
 乐谱的编码和解码采用了基于Transformer的结构, 遵循 [Xiaoicesing](2020.06.11_Xiaoicesing.md), 使用384维的嵌入层来编码乐谱中的歌词, 音高和持续时间.
-旋律的预测与 [VISinger](../../Models/Singing_Voice/2021.10.17_VISinger.md) 一致, 从原始音频中使用 pyworld提取真实旋律信号, 并通过自然对数计算.
+旋律的预测与 [VISinger](2021.10.17_VISinger.md) 一致, 从原始音频中使用 pyworld提取真实旋律信号, 并通过自然对数计算.
 预测的旋律信号通过一个简单的全连接网络 (图1中的粉色块) 传递给标识符预测器.
 在声码器中, 使用768维和256维的嵌入层分别编码标识符和旋律信号.
 生成器和判别器的参数与 [HiFi-GAN](../../Models/TTS3_Vocoder/2020.10.12_HiFi-GAN.md) 一致.
@@ -337,7 +337,7 @@ SVS需要遵循乐谱指定的时序变化, 这要求在持续时间预测方面
 <details>
 <summary>原文</summary>
 
-> We compare our discrete-based SVS system, ***TokSing***, with a fastspeech-like Mel spectrograms-based system [Xiaoicesing2](2022.10.26_Xiaoicesing2.md) and a VAE-structured latent variance-based system [VISinger2](../../Models/Singing_Voice/2022.11.05_VISinger2.md).
+> We compare our discrete-based SVS system, ***TokSing***, with a fastspeech-like Mel spectrograms-based system [Xiaoicesing2](2022.10.26_Xiaoicesing2.md) and a VAE-structured latent variance-based system [VISinger2](2022.11.05_VISinger2.md).
 > As mentioned in Section 2.2, singing is more sensitive to the duration variations of notes.
 > Therefore, all systems employ acoustic models with explicit length regulation in a NAR manner.
 > ***TokSing*** achieves better performance in both subjective and objective metrics, especially in the perception of melody.
@@ -351,7 +351,7 @@ SVS需要遵循乐谱指定的时序变化, 这要求在持续时间预测方面
 </details>
 <br>
 
-我们将我们的基于离散的SVS系统, ***TokSing***, 与基于梅尔频谱图的快速语音类似系统 [Xiaoicesing2](2022.10.26_Xiaoicesing2.md) 和基于VAE结构的潜在变量系统 [VISinger2](../../Models/Singing_Voice/2022.11.05_VISinger2.md) 进行了比较.
+我们将我们的基于离散的SVS系统, ***TokSing***, 与基于梅尔频谱图的快速语音类似系统 [Xiaoicesing2](2022.10.26_Xiaoicesing2.md) 和基于VAE结构的潜在变量系统 [VISinger2](2022.11.05_VISinger2.md) 进行了比较.
 如第2.2节所述, 歌唱对音符持续时间的变化更为敏感.
 因此, 所有系统都采用了具有明确长度调节的NAR方式的声学模型.
 ***TokSing*** 在主观和客观指标上都取得了更好的表现, 尤其是在旋律感知方面.
